wfrender.log
2017-01-04 10:51:27,070 ERROR [renderer.http] 

Some #directives are missing their corresponding #end ___ tag: if
Line 967, column 8

Line|Cheetah Code
----|-------------------------------------------------------------
964 |}
965 |</script>
966 |</body>
967 |</html>
            ^
Traceback (most recent call last):
  File "/home/var/opt/wfrog/wfrender/renderer/http.py", line 191, in do_GET
    [ mime, content ] = renderers[name].render(data=data, context=context)
  File "/home/var/opt/wfrog/wfcommon/generic/include.py", line 79, in _call
    return self.target.__getattribute__(attr).__call__(*args, **keywords)
  File "/home/var/opt/wfrog/wfrender/renderer/template.py", line 84, in render
    self.compiled_template = Template.compile(file=file(abs_path, "r"))
  File "/usr/lib/python2.7/dist-packages/Cheetah/Template.py", line 743, in compile
    compiler.compile()
  File "/usr/lib/python2.7/dist-packages/Cheetah/Compiler.py", line 1664, in compile
    self._parser.parse()
  File "/usr/lib/python2.7/dist-packages/Cheetah/Parser.py", line 1497, in parse
    self.assertEmptyOpenDirectivesStack()
  File "/usr/lib/python2.7/dist-packages/Cheetah/Parser.py", line 2657, in assertEmptyOpenDirectivesStack
    raise ParseError(self, msg=errorMsg)
ParseError: 

Some #directives are missing their corresponding #end ___ tag: if
Line 967, column 8

Line|Cheetah Code
----|-------------------------------------------------------------
964 |}
965 |</script>
966 |</body>
967 |</html>
            ^

2017-01-04 10:52:27,094 ERROR [renderer.http] invalid syntax (cheetah_DynamicallyCompiledCheetahTemplate_1483541547_09_31584.py, line 1312)
Traceback (most recent call last):
  File "/home/var/opt/wfrog/wfrender/renderer/http.py", line 191, in do_GET
    [ mime, content ] = renderers[name].render(data=data, context=context)
  File "/home/var/opt/wfrog/wfcommon/generic/include.py", line 79, in _call
    return self.target.__getattribute__(attr).__call__(*args, **keywords)
  File "/home/var/opt/wfrog/wfrender/renderer/template.py", line 84, in render
    self.compiled_template = Template.compile(file=file(abs_path, "r"))
  File "/usr/lib/python2.7/dist-packages/Cheetah/Template.py", line 796, in compile
    raise e
  File "cheetah_DynamicallyCompiledCheetahTemplate_1483541547_09_31584.py", line 1312
    if: # generated from line 936, col 1
      ^
SyntaxError: invalid syntax
2017-01-07 10:38:00,953 INFO [config] Starting wfrog 0.8.2.99-git
2017-01-07 10:38:00,953 INFO [config] Loaded settings file /home/td/.wfrog/settings.yaml
2017-01-07 10:38:00,954 DEBUG [config] Loaded settings {'units': {'press': 'hPa', 'rain': 'mm', 'temp': 'C', 'wind': 'kt'}, 'altitude': 0, 'station': {'driver': 'wh1080'}}
2017-01-07 10:38:00,954 DEBUG [config] Loaded config file /home/td/.wfrog/wfrender/config/wfrender.yaml
2017-01-07 10:38:00,954 DEBUG [config] Initializing accu_7d
2017-01-07 10:38:00,954 DEBUG [generic.service] Registering service <wfcommon.generic.YamlIncludeElement object at 0x7f7d991e4a90> under 'accu_7d'
2017-01-07 10:38:00,954 DEBUG [generic.service] Calling init on <wfcommon.generic.YamlIncludeElement object at 0x7f7d991e4a90>
2017-01-07 10:38:00,972 DEBUG [generic.include] Calling init on <wfrender.datasource.YamlAccumulatorDataSource object at 0x7f7d991e4790>
2017-01-07 10:38:00,972 DEBUG [config] Initializing accu_365d_w
2017-01-07 10:38:00,972 DEBUG [generic.service] Registering service <wfcommon.generic.YamlIncludeElement object at 0x7f7d991e4b10> under 'accu_365d_w'
2017-01-07 10:38:00,972 DEBUG [generic.service] Calling init on <wfcommon.generic.YamlIncludeElement object at 0x7f7d991e4b10>
2017-01-07 10:38:00,990 DEBUG [generic.include] Calling init on <wfrender.datasource.YamlAccumulatorDataSource object at 0x7f7d991e4190>
2017-01-07 10:38:00,990 DEBUG [config] Initializing accu_24h
2017-01-07 10:38:00,990 DEBUG [generic.service] Registering service <wfcommon.generic.YamlIncludeElement object at 0x7f7d991e4a50> under 'accu_24h'
2017-01-07 10:38:00,990 DEBUG [generic.service] Calling init on <wfcommon.generic.YamlIncludeElement object at 0x7f7d991e4a50>
2017-01-07 10:38:01,006 DEBUG [generic.include] Calling init on <wfrender.datasource.YamlAccumulatorDataSource object at 0x7f7d99177050>
2017-01-07 10:38:01,007 DEBUG [config] Initializing accu_3h
2017-01-07 10:38:01,007 DEBUG [generic.service] Registering service <wfcommon.generic.YamlIncludeElement object at 0x7f7d991e4a10> under 'accu_3h'
2017-01-07 10:38:01,007 DEBUG [generic.service] Calling init on <wfcommon.generic.YamlIncludeElement object at 0x7f7d991e4a10>
2017-01-07 10:38:01,023 DEBUG [generic.include] Calling init on <wfrender.datasource.YamlAccumulatorDataSource object at 0x7f7d991922d0>
2017-01-07 10:38:01,023 DEBUG [config] Initializing storage
2017-01-07 10:38:01,023 DEBUG [generic.service] Registering service <wfcommon.generic.YamlIncludeElement object at 0x7f7d991e49d0> under 'storage'
2017-01-07 10:38:01,023 DEBUG [generic.service] Calling init on <wfcommon.generic.YamlIncludeElement object at 0x7f7d991e49d0>
2017-01-07 10:38:01,028 DEBUG [generic.include] Calling init on <wfcommon.generic.YamlUserChoiceElement object at 0x7f7d99185c50>
2017-01-07 10:38:01,028 DEBUG [generic.user] Current user:default
2017-01-07 10:38:01,028 DEBUG [generic.user] Calling init on <wfcommon.storage.YamlCsvStorage object at 0x7f7d991858d0>
2017-01-07 10:38:01,028 DEBUG [config] Initializing accu_365d_m
2017-01-07 10:38:01,028 DEBUG [generic.service] Registering service <wfcommon.generic.YamlIncludeElement object at 0x7f7d991e4b50> under 'accu_365d_m'
2017-01-07 10:38:01,028 DEBUG [generic.service] Calling init on <wfcommon.generic.YamlIncludeElement object at 0x7f7d991e4b50>
2017-01-07 10:38:01,043 DEBUG [generic.include] Calling init on <wfrender.datasource.YamlAccumulatorDataSource object at 0x7f7d99185d50>
2017-01-07 10:38:01,043 DEBUG [config] Initializing accu_30d
2017-01-07 10:38:01,044 DEBUG [generic.service] Registering service <wfcommon.generic.YamlIncludeElement object at 0x7f7d991e4ad0> under 'accu_30d'
2017-01-07 10:38:01,044 DEBUG [generic.service] Calling init on <wfcommon.generic.YamlIncludeElement object at 0x7f7d991e4ad0>
2017-01-07 10:38:01,065 DEBUG [generic.include] Calling init on <wfrender.datasource.YamlAccumulatorDataSource object at 0x7f7d9918b750>
2017-01-07 10:38:01,065 DEBUG [wfrender] Starting root rendering.
2017-01-07 10:38:01,065 DEBUG [generic.multi] Calling render on child http
2017-01-07 10:38:01,066 INFO [renderer.http] Started server on port 7680
